rt/test/errors/051/test.volt
//T macro:expect-failure
//T check:error
// This was another infinite loop, hence the vague check.
module test;

fn main() i32 {
	asm {
	return 0;
